# MD_Stats

./: .app_state.json  .app_state.toml  .column_widths.json  .gitignore  CHANGELOG.md  README.md  config.toml  main.py  pyproject.toml
.github/workflows/: release.yml
docs/: BUILD.md  FROZEN.md  PRD.md  RANK_DETECTION.md  RANK_DETECTION_RESEARCH.md  README_release.md  RELEASE.md  TROUBLESHOOTING.md  config_gui_计划.md  macos_移植计划.md  实现计划.md  新需求.txt
docs/_dev/: RANK_DETECTION.md
resource/templates/: README.md
resource/templates/1600x900/: roi.toml
resource/templates/1920x1080/: roi.toml
resource/templates/2048x1152/: roi.toml
resource/templates/2560x1440/: roi.toml
resource/templates/3200x1800/: roi.toml
resource/templates/3840x2160/: roi.toml
resource/templates/rankicons/: rank_positions.toml
src/: app_state.py  capture.py  capture_mac.py  config.py  detector.py  failure_sample_manager.py  hotkey_listener.py  rank_detector.py  rank_icons.py  rank_worker.py  recorder.py  roi_manager.py  snapshot_controller.py  stats_worker.py  theme_loader.py
themes/: README.md
themes/dark/: theme.toml
themes/light/: theme.toml
themes/macaron/: style.qss  theme.toml
ui/: about_dialog.py  config_dialog.py  floating_window.py  hotkey_listener.py  main_window.py  main_window.ui  main_window_ui.py  meta.py  rank_edit_panel.py  rank_stats_dialog.py  theme_manager.py  titlebar.py
