[project]
name = "mdstats-py"
version = "1.5.1"
requires-python = ">=3.11"
dependencies = [
    "mss>=10.2.0",
    "numpy>=2.0",
    "opencv-python>=4.13.0.92",
    "pyside6>=6.11.1",
    "pywin32>=306; sys_platform == 'win32'",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
]
